src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
    font-family: roboto, sans-serif;
    line-height: 0;
    font-weight: 400;

    color: rgba(255, 255, 255, 0.87);
    /* background-color: #242424; */

    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    -webkit-text-size-adjust: 100%;
}

#root {
    @apply mx-auto my-0 h-full text-center font-roboto sm:w-full;
}

body,
html {
    @apply m-0 h-full overflow-x-auto max-sm:overflow-x-clip;
}

* DEFAULT ELEMENTS * h1,
h3 {
    @apply font-roboto font-bold;
}

h1 {
    @apply text-3xl font-bold;
}

h3 {
    @apply text-xl;
}

h4 {
    @apply text-2xl font-semibold leading-10 text-opacity-[0.87];
}
input,
select {
    @apply w-full rounded-md border border-[#C2C2C2] bg-white px-[15px] py-[8px] text-sm font-medium text-black;
}

thead.multi-rows th {
    @apply border border-secondary;
}

/** CUSTOM ELEMENTS **/

span.error-message {
    @apply block px-2 text-left text-sm text-red-500;
}
.rt-BaseDialogOverlay::before {
    background-color: rgba(0, 0, 0, 0.2) !important;
}
/** BACKGROUNDS, COLORS AND GRADIENTS **/
* {
    transition: background-color 0.2s ease, color 0.2s ease;
}

/* Estilização de scrollbar */
::-webkit-scrollbar {
    width: 6px;
}
::-webkit-scrollbar-thumb {
    background: var(--primary-light);
    border-radius: 4px;
}

.bg-professional {
    @apply bg-neutral-50;
}
.shadow-bottom-lg {
    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
}
.card-container {
    @apply rounded-xl border border-neutral-100 bg-white shadow-lg;
}
.card-container-variante-border {
    @apply rounded-none bg-white shadow-lg;
}

.heading-1 {
    @apply text-xl font-bold text-neutral-800;
}

.heading-2 {
    @apply text-xl font-semibold text-neutral-700;
}

.btn-primary {
    @apply transition-all duration-200  active:scale-95;
}

.btn-primary-mobo {
    @apply transition-all duration-200 hover:scale-95 active:scale-105;
}
.rt-Badge {
    @apply !font-roboto;
}
@keyframes fadeIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

.animate-fade-in {
    animation: fadeIn 0.5s ease-out forwards;
}
@keyframes spin {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

.animate-spin {
    animation: spin 1s linear infinite;
}

.bg-glass {
    background: rgba(255, 255, 255, 0.15);
    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.3);
    backdrop-filter: blur(2px);
    -webkit-backdrop-filter: blur(2px);
    border-radius: 12px;
    border: 1px solid rgba(255, 255, 255, 0.2);
}
.bg-glass-no-border {
    background: rgba(255, 255, 255, 0.15);
    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.3);
    backdrop-filter: blur(20px);
    -webkit-backdrop-filter: blur(20px);
}
.centralizado {
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

/** Background animate **/
@keyframes forward-expand {
    0% {
        transform: scale(1);
    }
    100% {
        transform: scale(1.2);
    }
}

.animate-forward-expand {
    animation: forward-expand 1.2s cubic-bezier(0.4, 0, 0.2, 1) forwards;
    animation-delay: 0.3s;
    transform-origin: center;
}

/** PDF VIWER **/

.pdf-viewer-container {
    /* border: 1px solid #ccc; */
    border-radius: 8px;
    overflow: hidden;
    transition: all 0.3s ease;
}

.pdf-viewer-container.fullscreen {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 9999;
}
.radix-themes.light.rt-PopperContent.rt-HoverCardContent.rt-r-size-2.rt-r-max-w.p-4.shadow-xl.rounded-lg.border.border-gray-100.max-w-sm.animate-in.fade-in-0.zoom-in-95 {
    padding: 0px;
}
.overlay-message {
    position: absolute;
    bottom: 0%;
    left: 50%;
    transform: translate(-50%, -50%);
    background: rgba(0, 0, 0, 0.7);
    color: white;
    padding: 8px 16px;
    border-radius: 4px;
    font-size: 0.9em;
    z-index: 100;
}

/** TYPOGRAPHY */

.subtitle-2 {
    @apply text-sm font-medium leading-4 text-opacity-[0.87];
}

.caption {
    @apply text-xs font-normal leading-3 text-opacity-60;
}

@media (max-width: 767px) {
    h3 {
        @apply font-roboto text-base font-bold;
    }

    h1 {
        @apply text-xl font-bold;
    }

    h4 {
        @apply text-sm font-semibold leading-10 text-opacity-[0.87];
    }
}
@layer utilities {
    @media (min-width: 1020px) {
        .desktop {
            display: block !important;
        }
        .desktop-flex {
            display: flex !important;
        }
        .mobo {
            display: none !important;
        }
        .mobo-flex {
            display: none !important;
        }
    }
    @media (max-width: 1019px) {
        .desktop {
            display: none !important;
        }
        .desktop-flex {
            display: none !important;
        }
        .mobo {
            display: block !important;
        }
        .mobo-flex {
            display: flex !important;
        }
        .mobo-only {
            margin-top: 40px;
        }
    }
}

